# warehouse_rust

./: .env.example  Cargo.toml  Dockerfile  README.md
src/: main.rs
src/config/: mod.rs
src/handler/: mod.rs
src/handler/helper/: mod.rs
src/model/: dto.rs  mod.rs
src/routers/: mod.rs
